ingress/ingress-with-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-books-authors
spec:
  rules:
  - http:
      paths:
      - path: /books
        backend:
          service:
            name: books-service
            port:
              number: 80
      - path: /authors
        backend:
          service:
            name: authors-service
            port:
              number: 80
