ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-books
spec:
  backend:
    service:
      name: books-service
      port:
        number: 80
